# jdw-sequencer

./: AGENTS.md  Cargo.toml  README.md  config.toml  message_plan.md  pom.xml  readme.md  release_1_requirements.md
python/: update_queue_test.py
src/: api.rs  bundle_model.rs  config.rs  daemon.rs  external_calls.rs  jdw_osc_polling.rs  lib.rs  local_messaging.rs  main.rs  master_sequencer.rs  midi_utils.rs  model.rs  osc_client.rs  osc_communication.rs  osc_model.rs  osc_read_daemon.rs  osc_stack.rs  player_management.rs  queue.rs  rest.rs  sequence_player.rs  sequencer.rs  sequencing_daemon.rs  zeromq.rs
src/main/kotlin/com/jackdaw/jdwsequencer/: JdwSequencerApplication.kt  ProscPlayerManager.kt  RestClient.kt  RestController.kt  SequencePlayer.kt  SequencerService.kt  SpringConfiguration.kt
src/main/kotlin/com/jackdaw/jdwsequencer/model/: InputNote.kt  MIDIUtils.kt  Note.kt  PlayerNote.kt  RestInputNote.kt  RestInputSequenceData.kt  SequenceData.kt  SequencePlayer.kt  SequencerNote.kt
src/model/: internal_types.rs  midi_api.rs  midi_out.rs  midi_utils.rs  mod.rs  prosc_api.rs  rest_input.rs  sequencer.rs
src/test/kotlin/com/jackdaw/jdwsequencer/: JdwSequencerApplicationTests.kt
