[package]
name = "jdw-sequencer"
version = "0.1.0"
authors = ["estrandv <emil.strandvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # https://serde.rs/derive.html

rosc = "0.7.0"
chrono = "0.4.19"
bytes = "0.6.0"
futures = "0.3.21"
env_logger = "*"
spin_sleep = "1.1.1"
bigdecimal = "0.4.2"

tracing = "0.1.35"
tracing-futures = "0.2.5"

log = "0.4.17"
simple_logger = "2.2.0"
jdw-osc-lib = { git = "https://github.com/estrandv/jdw-osc-lib.git", branch = "master" }
