[package]
name = "jdw-sequencer"
version = "0.1.0"
authors = ["estrandv <emil.strandvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # https://serde.rs/derive.html

rosc = "0.10.1"
chrono = "0.4.38"
bytes = "1.8.0"
futures = "0.3.31"
env_logger = "*"
spin_sleep = "1.2.1"
bigdecimal = "0.4.6"

tracing = "0.1.40"
tracing-futures = "0.2.5"

log = "0.4.22"
simple_logger = "5.0.0"
jdw-osc-lib = { git = "https://github.com/estrandv/jdw-osc-lib.git", branch = "master" }
ringbuf = "0.4.7"
